# realtime-translator

./: BACKEND.md  PLAN.md  UI.md  install.sh  uninstall.sh
backend/: .gitignore  README.md  pyproject.toml
backend/app/: config.py  logging_config.py  main.py
backend/app/asr/: gipformer.py  types.py  whisper.py
backend/app/audio/: buffer.py  vad.py
backend/app/translate/: bonsai.py  session_state.py
backend/app/ws/: protocol.py
backend/scripts/: download_models.sh
macapp/: .gitignore  Package.swift  README.md  project.yml
macapp/Sources/Translate/: AppDelegate.swift  TranslateApp.swift
macapp/Sources/Translate/Audio/: AudioCaptureEngine.swift  AudioPermission.swift  AudioSource.swift  VideoFileAudioSource.swift
macapp/Sources/Translate/Networking/: BackendClient.swift  Protocol.swift  SessionCoordinator.swift
macapp/Sources/Translate/Process/: BackendProcessManager.swift  ProcessStatus.swift
macapp/Sources/Translate/Resources/: Info.plist
macapp/Sources/Translate/State/: ModelSelection.swift  Segment.swift  SessionStore.swift
macapp/Sources/Translate/Views/: ContentView.swift  ModelsView.swift  SegmentRow.swift  SettingsView.swift  Sidebar.swift  TranscriptColumn.swift  VideoPlayerView.swift
