[project]
name = "vi-en-translate-backend"
version = "0.1.0"
description = "Local VI->EN realtime translation backend (VAD + Gipformer ASR + Bonsai MLX translation)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "websockets>=13.0",
    "sherpa-onnx>=1.10",
    "sherpa-onnx-core>=1.10",  # bundles libonnxruntime.dylib; sherpa-onnx's own metadata requires it but uv doesn't always auto-resolve it
    "huggingface_hub>=0.25",
    "silero-vad>=5.1",
    "torch>=2.3",
    "numpy>=1.26",
    "soundfile>=0.12",
    "httpx>=0.27",
    "pydantic>=2.9",
    "sounddevice>=0.5",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
]
